[project]
name = "sphinx-ulthiel"
version = "0.1.0"
description = "A simple Sphinx extension to handle extra stuff for ulthiel."
authors = [
  { name = "Ulrich Thiel", email = "ulrich.thiel@math.rptu.de" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["sphinx>=5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

